--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   connectivity_plus: 2.1.0
   get: 4.5.1
   firebase_auth: 3.3.5
+  image_picker: 0.8.4+1
+  firebase_storage: 10.0.6
 
 dev_dependencies:
   flutter_test:
